fix some issues 2