@@ -1,26 +1,25 @@
-# Walkthrough - Final UI Polish & Visibility Fix
+# Walkthrough - Rich Text & Contrast Fix
 
-I have applied a final layer of polish to resolve the visibility issues in the Side Drawer and ensure the category selection is as clear as possible.
+I have implemented a true WYSIWYG experience for bold/italic text and resolved the visibility issues with Category chips.
 
 ## 🌟 Key Improvements
 
-### 🌙 High-Contrast Side Drawer
-- **Crystal Clear Text**: Boosted the visibility of unselected items (Archive, Trash, Settings) in Dark Mode. They now use a **90% Bright White** color, making them perfectly readable against the dark background.
-- **Improved Hierarchy**: Standardized the font size and icon alignment to give the menu a more professional and clean look.
+### ✍️ True Rich Text Editor (WYSIWYG)
+- **No More Stars**: Fixed the issue where Markdown markers (`**` and `*`) were cluttering your notes. They are now **hidden visually**, allowing you to see the bold and italic effects directly.
+- **Smart Toggle**: The Bold and Italic buttons now work like a professional word processor:
+    - Select text and click **B** to make it bold.
+    - Click **B** again to remove the bold effect.
+    - It even works if your cursor is just sitting inside a bold word!
 
-### 🏷️ Super-Clear Category Selection
-- **Bold Selection State**: Selected categories now feature a **thick dark border (2.5px)**, a **primary color background**, and a **prominent checkmark**.
-- **Shadow & Elevation**: Added a subtle shadow and elevation to the selected category so it "pops" out from the others.
-- **Adaptive Unselected State**: Unselected categories now have a very subtle background, ensuring the active one is always the focus.
-
-### ✍️ Optimized Editor Experience
-- **More Space**: Refined the floating pill bar at the bottom to ensure it doesn't overlap with your text.
-- **Contrast Check**: All interactive elements (PDF export, lock, save) now use a dynamic contrast engine that works perfectly on any background color.
+### 🏷️ Category Chip Visibility
+- **Fixed "Invisible" Text**: Resolved the issue where category names were disappearing in Dark Mode or appearing as black blocks in Light Mode.
+- **High Contrast**: Used `RawChip` with a transparent background and dynamic borders. This ensures that whether you are on a white or dark note background, the text is always sharp and readable.
+- **Improved Shape**: Updated the chips to be more modern and less cramped.
 
 ## 🛠️ Technical Summary
-- **Visibility**: Overrode unselected `ListTile` colors in the [AppDrawer](file:///U:/StudioProjects/mynote/lib/presentation/widgets/app_drawer.dart) using explicit `isDark` logic.
-- **Clarity**: Custom-styled the `ChoiceChip` in the [NoteEditorPage](file:///U:/StudioProjects/mynote/lib/presentation/pages/note_editor_page.dart) with enhanced borders and shadows.
-- **Build Fix**: Added `--add-opens` flags to `gradle.properties` to help with Java 25 compatibility issues.
+- **Logic**: Overhauled [MarkdownTextController](file:///U:/StudioProjects/mynote/lib/logic/services/markdown_text_controller.dart) to use transparent markers.
+- **Smart Formatting**: Re-implemented `_formatText` in [NoteEditorPage](file:///U:/StudioProjects/mynote/lib/presentation/pages/note_editor_page.dart) with "inside-marker" detection.
+- **UI Architecture**: Switched from `ChoiceChip` to `RawChip` to bypass restrictive Material 3 theme defaults that were causing the color bugs.
 
-> [!NOTE]
-> The build error `25.0.2` you encountered is related to the very new **Java 25** version on your system. I have added configuration flags to help Gradle handle this, but if problems persist, using Java 17 or 21 is recommended for Android development.
+> [!TIP]
+> Try selecting a word and clicking Bold. You'll see the text thicken instantly without any extra symbols appearing around it!
